修正成commonJS寫法

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express03",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
-    "test": "nodemon index.mjs",
-    "start": "node index.mjs"
+    "test": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
